[workspace]
members = [
    "sloploader",
    "fus",
    "pit",
    "odin",
]
resolver = "2"

[workspace.package]
version = "1.2.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/topjohnwu/sloploader-rs"

[workspace.dependencies]
sloploader-fus = { version = "1.2.0", path = "fus" }
sloploader-pit = { version = "1.2.0", path = "pit" }
sloploader-odin = { version = "1.2.0", path = "odin" }
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "cookies",
    "native-tls-no-alpn",
    "native-tls-vendored",
] }
aes = "0.9"
ecb = "0.2"
md-5 = "0.11"
roxmltree = "0.21"
memmap2 = "0.9"
clap = "4.6"
indicatif = "0.18"
binrw = "0.15"
modular-bitfield = "0.13.1"
serialport = "4.3"
tar = "0.4"
md5 = "0.8"
thiserror = "2"
