[workspace]
members = [
    "samloader",
    "fus",
    "pit",
    "odin",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/topjohnwu/samloader-rs"
readme = "README.md"

[workspace.dependencies]
samloader-fus = { version = "2.0.0", path = "fus" }
samloader-pit = { version = "2.0.0", path = "pit" }
samloader-odin = { version = "2.0.0", path = "odin" }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "cookies"] }
aes = "0.9"
ecb = "0.2"
roxmltree = "0.21"
memmap2 = "0.9"
clap = "4.6"
indicatif = "0.18"
binrw = "0.15"
modular-bitfield = "0.13.1"
rusb = { version = "0.9", features = ["vendored"] }
serialport = { version = "4.9", default-features = false }
tar = "0.4"
fast-md5 = "1.0.0"
thiserror = "2"
lz4_flex = "0.13.1"
libc = "0.2"
