[package]
name = "samloader-fus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Samsung Firmware-Update-Server (FUS) client"
keywords = ["samsung", "firmware"]

[dependencies]
reqwest = { workspace = true }
aes = { workspace = true }
ecb = { workspace = true }
fast-md5 = { workspace = true }
roxmltree = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
reqwest = { workspace = true, features = ["native-tls"] }

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
reqwest = { workspace = true, features = ["default-tls"] }
