[package]
name = "heimdall"
version = "0.1.0"
edition = "2021"

[dependencies]
libpit = { path = "../libpit" }
cxx = "1.0"
rusb = "0.9"
libc = "0.2"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
cxx-build = "1.0"

[[bin]]
name = "heimdall"
path = "src/main.rs"
