[package]
name = "samloader-odin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
samloader-pit = { workspace = true }
rusb = { workspace = true }
binrw = { workspace = true }
fast-md5 = { workspace = true }
serialport = { workspace = true }
thiserror = { workspace = true }
lz4_flex = { workspace = true }
