[package]
name = "samloader-odin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Samsung device download mode Odin client"
keywords = ["samsung", "firmware"]

[dependencies]
samloader-pit = { workspace = true }
memmap2 = { workspace = true }
rusb = { workspace = true }
binrw = { workspace = true }
fast-md5 = { workspace = true }
serialport = { workspace = true }
thiserror = { workspace = true }
lz4_flex = { workspace = true }
