[package]
name = "samloader-fus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Samsung Firmware-Update-Server (FUS) client"
keywords = ["samsung", "firmware"]

[dependencies]
reqwest = { workspace = true }
aes = { workspace = true }
ecb = { workspace = true }
md-5 = { workspace = true }
roxmltree = { workspace = true }
memmap2 = { workspace = true }
