[package]
name = "samloader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Download firmware for Samsung devices"
keywords = ["samsung", "firmware"]

[dependencies]
samloader-fus = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
