[package]
name = "samloader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Download and flash firmware for Samsung devices"
keywords = ["samsung", "firmware"]

[dependencies]
samloader-fus = { workspace = true }
samloader-pit = { workspace = true }
samloader-odin = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
memmap2 = { workspace = true }
tar = { workspace = true }
libc = { workspace = true }
cfg-if = { workspace = true }

[features]
default = ["nusb", "serialport"]
rusb = ["samloader-odin/rusb"]
nusb = ["samloader-odin/nusb"]
serialport = ["samloader-odin/serialport"]
