[package]
name = "sloploader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Download and flash firmware for Samsung devices"
keywords = ["samsung", "firmware"]

[dependencies]
sloploader-fus = { workspace = true }
sloploader-pit = { workspace = true }
sloploader-odin = { workspace = true }
clap = { workspace = true, features = ["derive"] }
indicatif = { workspace = true }
memmap2 = { workspace = true }
tar = { workspace = true }
